adding AWS Lambda configurations

--- a/tests/notes.ipynb
+++ b/tests/notes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "    \"_id\": \"63348c2c838cbf9c62faefac\",\n",
     "    \"client\": {\n",
     "        \"city\": \"sometext\",\n",
-    "        \"name\": \"Dummy\"\n",
+    "        \"name\": \"Dummy\",\n",
     "        \"email\": \"dummy@email.com\",\n",
     "        \"sex\": \"sometext\",\n",
     "        \"birthdate\": \"1990-03-29T00:00:00.000Z\",\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': 'modi nobis elit. modi',\n",
+       " 'client': {'city': 'consectetur reiciendis possimus officiis placeat',\n",
+       "  'name': 'nobis adipisicing elit. elit. odit adipisicing',\n",
+       "  'email': 'exercitationem repellendus nobis amet',\n",
+       "  'sex': 'Hic dolor ipsum',\n",
+       "  'birthdate': 'exercitationem quas nobis reprehenderit esse odit',\n",
+       "  'phone': 'modi'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "faker.generate()"
    ]
@@ -122,7 +139,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c24a596cdba38355af3bc0918323b19ef6e3e3299b467c98c4c44b7b32043303"
+    "hash": "609fd8d4417f6fd5766374ee6fcb46025e6488f6f3ba2cbf7499a2495af5bea9"
    }
   }
  },
